// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render different time formats eg(short,medium,full,long) should render component as expected (1) 1`] = `
<gux-time-beta class="gux-time" datetime="2022-07-07T13:35:30.100Z" format="short">
  <mock:shadow-root>
    Invalid Date
  </mock:shadow-root>
</gux-time-beta>
`;

exports[`#render different time formats eg(short,medium,full,long) should render component as expected (2) 1`] = `
<gux-time-beta class="gux-time" datetime="2022-07-07T13:35:30.100Z" format="medium">
  <mock:shadow-root>
    Invalid Date
  </mock:shadow-root>
</gux-time-beta>
`;

exports[`#render different time formats eg(short,medium,full,long) should render component as expected (3) 1`] = `
<gux-time-beta class="gux-time" datetime="2022-07-07T13:35:30.100Z" format="full">
  <mock:shadow-root>
    Invalid Date
  </mock:shadow-root>
</gux-time-beta>
`;

exports[`#render different time formats eg(short,medium,full,long) should render component as expected (4) 1`] = `
<gux-time-beta class="gux-time" datetime="2022-07-07T13:35:30.100Z" format="long">
  <mock:shadow-root>
    Invalid Date
  </mock:shadow-root>
</gux-time-beta>
`;
